# bevy_polyline

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clean_cache.yml  rust.yml
assets/models/: capped_half_cylinder2.glb
examples/: batching_test.rs  clipping.rs  depth_bias.rs  joins.rs  linestrip.rs  minimal.rs  nbody.rs  perspective.rs
src/: clipping.rs  global_render_resources_node.rs  lib.rs  material.rs  polyline.rs
src/old/: global_render_resources_node.rs  lib.rs
src/pipeline/: miter_join.frag  miter_join.vert  mod.rs  poly_line.frag  poly_line.vert  polyline.frag  polyline.vert  polyline_pbr.frag  polyline_pbr.vert
src/render/: polyline.vert
src/shaders/: mesh_polyline.wgsl  polyline.vert  polyline.wgsl
