[package]
edition = "2021"
name = "bevy_polyline"
version = "0.8.1"
description = "Polyline Rendering for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline"
homepage = "https://github.com/ForesightMiningSoftwareCorporation/bevy_polyline"
documentation = "https://docs.rs/bevy_polyline"
readme = "README.md"
keywords = ["bevy", "gamedev", "polyline", "graphics"]
categories = ["rendering", "game-development"]
authors = [
    "Foresight Mining Software Corporation",
    "Jonas Matser",
    "Aevyrie Roessler",
]

[dependencies]
bitflags = "2.4"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
] }

[dependencies.naga]
features = ["glsl-in", "spv-out", "wgsl-out"]
version = "0.13"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
ringbuffer = "0.15"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "bevy_pbr",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }
